k8s/namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inventory-dev
  labels:
    name: inventory-dev
    environment: development
