k8s/namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inventory-prod
  labels:
    name: inventory-prod
    environment: production
